--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
